styles/utils.module.css
.heading2Xl {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 800;
  letter-spacing: -0.05rem;
  margin-top: 0.7rem;
  margin-bottom: 1rem;
  color: #222222;
}

.NameCss {
  /*
    text-shadow: 0 0 2px rgba(255, 255, 255, 1);
  */
  font-size: 2.5rem;
  font-weight: 800;
  letter-spacing: -0.02rem;
  margin-top: 1px;
  margin-bottom: 5px;
  margin-left: 0px;
  margin-right: 0px;
  text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
  /*
   color: #f0f0f0;
   */
    color: #f9f9f9;
}

.headingXl {
  font-size: 2.5rem;
  line-height: 1.3;
  font-weight: 800;
  letter-spacing: -0.05rem;
  color: #222222;
  margin: 1rem 0;
}

.headingPostTitle {
  color: #222222;
  font-size: 2.5rem;
  line-height: 1.3;
  font-weight: 800;
  letter-spacing: -0.05rem;
}

.headingAbout {
  font-size: 2rem;
  margin-bottom: 0px;
  margin-top: -1.8rem;
}

.headingLg {
  font-size: 2rem;
  line-height: 1.4;
  margin: 0px 0px;
}

.headingMd {
  font-size: 1.6rem;
  line-height: 1.5;
}

.headingDd {
  font-size: 1.2rem;
  line-height: 1.5;
  font-weight: bold;
}

.borderCircle {
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 1);
  border-radius: 8px;
  margin: 0px 0px;
}

.quote {
  font-style: italic; 
  font-size: 0.85rem; 
  color: #ccc; 
  padding-top: 10px;
  margin-bottom: -5px;
  text-align: center;
}

.colorInherit {
  color: inherit;
}

.padding1px {
  padding-top: 1px;
}

.list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.link {
  margin-left: 20px;
}

.listItem {
  margin: 0 0 1.25rem;
}

.lightText {
  color: #666;
  margin-top: -5px;
}

.introSection {
  padding: 2rem 1.5rem;
  /*
  background-color: #EAEAEA;
  */
  background-color: #fbf8fd; 
  border-radius: 8px;
  /*
  box-shadow: 0px 0px 12px rgba(255, 255, 255, 1);
  */
}

.introSectionAllPosts {
  padding-top: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1rem;
  background-color: #FBF8FD;
  border-radius: 8px;
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
}

.introText {
  margin: 0px 0px;
  font-size: 1.4rem;
  line-height: 1.2;
  text-align: justify;
}

.socialLinks {
  margin: 0px 0px;
  font-size: 25px;
}

.showlinksBorderContainer {
  display: flex;
  align-items: center;
}

.showlinksBorder {
  font-weight: 500;
  font-size: 25px;
  border: 2px solid #282a36;
  padding: 0px 8px;
  border-radius: 5px;
  transition: background-color 0.1s, color 0.3s, border-color 0.3s; 
  text-align: center; 
  width: auto; 
  background-color: transparent; 
  color: #282a36; 
  text-decoration: none;
  display: inline-block; 
}

.showlinksBorder:hover {
  color: #fff; 
  background-color: #282a36; 
  border-color: #282a36; 
}

.showlinksBorder:focus {
  outline: none; 
}

.link {
  display: inline-block;
  margin-right: 20px;
  color: #0070f3;
  text-decoration: none;
}

.link:hover {
  text-decoration: underline;
}

.postList {
  list-style: none;
  padding: 0;
}

.postItem {
  margin-bottom: 0px;
}

.postLink {
  text-decoration: none;
  color: #333;
  font-weight: 600;
}
.postLinkH1 {
  color: #333;
  text-decoration: none;
}

.postLink:hover {
  text-decoration: underline;
}

.postDate {
  color: #666;
}

.footer {
  color: #666;
  text-align: center;
  font-size: 0.8rem;
  margin-bottom: -29px;
}

.content {
  font-size: 1.2rem;
  line-height: 1.6;
  color: #333;
}

.latestPostContainer {
  margin: 0px 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.showAllLink {
  text-decoration: none;
  color: #282a36;
  font-weight: 500;
  font-size: 20px;
  border: 2px solid #282a36;
  padding: 0px 8px;
  border-radius: 5px;
  transition: background-color 0.1s, color 0.3s, border-color 0.3s; 
  display: inline-block; 
  text-align: center; 
  width: auto; 
  background-color: transparent; 
}

.showAllLink:hover {
  color: #fff; 
  background-color: #282a36; 
  border-color: #282a36; 
}

.showAllLink:focus {
  outline: none; 
}

.iconText {
  display: flex;
  align-items: center;
  transition: transform 0.3s, color 0.3s; 
  color: #FBF8FD;
  font-weight: bold;
}

.iconText:hover {
  transition-delay: 100ms;
  transform: translateX(-10px);
  color: #b0e0e6;
  font-weight: bold;
}

.icon {
  font-weight: lighpaddingt; 
  margin-top: 2px;
  margin-right: 5px;
}

.headingAllPosts {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.SoftBorderAroundAbout {
  border: 2px dashed #282a36;
  padding: 0px 8px;
  border-radius: 5px;
  width: auto;
  background-color: #f0f0f0;
  text-decoration: none;
}

.SoftBorderAroundLatestPost {
  border: 2px dashed #282a36;
  padding: 0px 8px;
  border-radius: 5px;
  width: auto;
  /*
  background-color: #f0f0f0;
  */
  background-color: #fbf8fd;
  text-decoration: none;
  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
}

.SoftBorderAroundLatestPost:hover {
  transform: scale(1.02); 
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
}

.SoftBorderAroundAllPost {
  margin-bottom: 10px;
  border: 2px dashed #282a36;
  padding: 0px 8px;
  border-radius: 5px;
  width: auto;
  background-color: #FBF8FD;
  text-decoration: none;
  transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
}

.SoftBorderAroundAllPost:hover {
  transform: scale(1.02); 
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
}

.backsvg {
  position: fixed;
  pointer-events: none;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: block;
  background-color: #0e1a40;
  background-image: #0e1a40;
  z-index: -100;
}

@media (max-width: 767px) {
  .footer {
    color: #666;
    text-align: center;
    font-size: 1rem;
    margin-top: 10px;
    line-height: 1.6;
    margin-bottom: -10px;
  }
  .SoftBorderAroundLatestPost {
    border: 2px dashed #282a36;
    padding: 10px 16px;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
    transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
  }
  .SoftBorderAroundAbout {
    border: 2px dashed #282a36;
    padding: 10px 16px;
    line-height: 1.2;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
  }
  .NameCss {
    font-size: 2.5rem;
    font-weight: 800;
    letter-spacing: -0.02rem;
    margin-top: 15px;
    margin-bottom: 19px;
    margin-left: 0px;
    margin-right: 0px;
  text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
  /*
   color: #f0f0f0;
   */
    color: #f9f9f9;
  }
  .showlinksBorderContainer {
    display: block;
  }
  .showlinksBorder {
    font-weight: 500;
    font-size: 20px;
    border: 2px solid #282a36;
    padding: 10px 8px;
    border-radius: 5px;
    transition: background-color 0.1s, color 0.3s, border-color 0.3s; 
    text-align: center; 
    width: auto; 
    background-color: transparent; 
    color: #282a36; 
    text-decoration: none;
    display: block; 
    margin: 5px auto;
  }
  .showlinksBorder:hover {
    color: #fff; 
    background-color: #282a36; 
    border-color: #282a36; 
  }
  .showlinksBorder:focus {
    outline: none; 
  }
  .showAllLink {
    margin-top: 2px;
    text-decoration: none;
    color: #282a36;
    font-weight: 500;
    font-size: 20px;
    border: 2px solid #282a36;
    padding: 10px 10px;
    border-radius: 5px;
    transition: background-color 0.1s, color 0.3s, border-color 0.3s; 
    display: inline-block; 
    text-align: center; 
    width: auto; 
    background-color: transparent; 
  }
  .showAllLink:hover {
    color: #fff; 
    background-color: #282a36; 
    border-color: #282a36; 
  }
  .showAllLink:focus {
    outline: none; 
  }
  .lightText {
    color: #666;
    margin-top: 7px;
    margin-bottom: 7px;
  }
  .borderCircle {
    box-shadow: 0px 0px 6px rgba(0, 0, 0, 1);
    border-radius: 8px;
    height: 80%;
    width: 80%;
    margin: 0px auto;
  }
  .headingPostTitle {
    color: #222222;
    font-size: 2.5rem;
    line-height: 1.3;
    font-weight: 800;
    letter-spacing: -0.05rem;
  }
  .SoftBorderAroundAbout {
    border: 2px dashed #282a36;
    padding: 0px 8px;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
  }
  .postLink {
    text-decoration: none;
    margin: 10px 0px;
    color: #333;
    font-size: 17px;
    font-weight: 600;
  }
  .introText {
      margin: 0px 0px;
  font-size: 1.4rem;
  line-height: 1.1;
  text-align: justify;
}
  .headingAbout {
    font-size: 2rem;
    margin-top: -20px;
    margin-bottom: 10px;
  }
  .headingLg {
    font-size: 2rem;
    line-height: 1.4;
    margin: 0px 0px;
  }
}

